# build-your-pc

./: .gitignore  README.md  package.json
backend/: pyproject.toml
backend/app/: app.py  db.py  models.py  users.py
frontend/: package.json
frontend/public/: manifest.json
frontend/src/: App.js
frontend/src/layouts/pages/profile/: index.js
frontend/src/pages/LandingPages/AboutUs/: index.js
frontend/src/pages/LandingPages/Register/: index.js
frontend/src/pages/LandingPages/SignIn/: index.js
public/: index.html
src/: footer.routes.js  routes.js
src/layouts/pages/authentication/register/: index.js
src/pages/LandingPages/AboutUs/: index.js
src/pages/LandingPages/Register/: index.js
