[tool.poetry]
name = "build-your-pc-backend"
version = "0.1.0"
description = ""
authors = ["Zach Sirotto <zach.sirotto@ibm.com>"]
readme = "README.md"
packages = [{include = "build_your_pc_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "^12.1.2"}
sqlalchemy = "^2.0.23"
aiosqlite = "^0.19.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.24.0.post1"


[tool.poetry.group.sqlalchemy.dependencies]
fastapi-users = "^12.1.2"


[tool.poetry.group.oauth.dependencies]
fastapi-users = "^12.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
